--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Press+Start+2P" as="style" onload="rel='stylesheet'">
-  <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+  <link rel="icon" href="data:,">
 </head>
 
 <body>
